Fixed Overflow in LogIn and SignUp page

--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,3 @@
   display: grid;
   place-items: center;
 }
-
-html,body {
-  margin:0;
-  padding:0;
-  overflow-x:hidden;
-}
