--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,3 +1,6 @@
 .signup-padding{
     padding-top: 7em;
 }
+.signup-margin{
+    margin: 0;
+}
